📱 Add responsive menu

--- a/src/app.html
+++ b/src/app.html
@@ -9,5 +9,6 @@
 	</head>
 	<body>
 		<div id="svelte">%svelte.body%</div>
+		<script src="../node_modules/bootstrap/dist/js/bootstrap"></script>
 	</body>
 </html>
