--- a/src/app.html
+++ b/src/app.html
@@ -9,6 +9,6 @@
 	</head>
 	<body>
 		<div id="svelte">%svelte.body%</div>
-		<script src="../node_modules/bootstrap/dist/js/bootstrap"></script>
+		<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" crossorigin="anonymous"></script>
 	</body>
 </html>
